--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,7 @@
     "import/prefer-default-export": "off",
     "camelcase": "off",
     "@typescript-eslint/ban-types": "off",
+    "import/no-duplicates": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
