Configurando variavel de ambiente

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "lint": "eslint --fix",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
